2017-11-14  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): New minor version

	* src/parse.cpp (tomlparseImpl): New argument 'includize'

	* R/parseToml.R (parseTOML): Support new argument
	* man/parseTOML.Rd: Document it

	* tests/misc.R: Added test for parse from string, summary()
	* tests/misc.Rout.save: Reference output

	* src/init.c: Removed, registration now in src/RcppExports.cpp

2017-11-13  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): New minor version

	* src/parse.cpp (tomlparseImpl): Add support for includize
	pre-processor; add its toml.hpp header

	* inst/include/includize.hpp: Included copy from @dcdillon's repo
	* inst/include/toml.hpp: Idem

	* inst/include/includize.hpp (includize): Do without codecvt

	* .travis.yml: Upgrade gcc and g++ to 4.9

2017-05-02  Dirk Eddelbuettel  <edd@debian.org>

	* src/parse.cpp (tomlparseImpl): Convert the StretchyList to List
	when inserting so they are seen as Lists in R (cf discussion in #16)

	* tests/arrays.Rout.save: Update reference output
	* tests/tomlExamples.Rout.save: Idem

2017-04-25  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Release 0.1.3

2017-04-24  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Roll minor version

	* src/parse.cpp (getTable): Nested TableArray types are now
	recognised; condition print statement on verbose mode

	* tests/arrays.Rout.save: Update reference output
	* tests/tomlExamples.Rout.save: Idem

2017-03-26  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Release 0.1.2

	* src/init.c (R_init_RcppTOML): all R_registerRoutines()
	and R_useDynamicSymbols()
	* NAMESPACE: Use .registration=TRUE on useDynLib

        * LICENSE: Added to repository
        * .Rbuildignore: Do not include LICENSE in package

	* inst/toml/ex4.toml (bla): Uncomment Datetimevector

	* inst/toml/example.toml: Updated to upstream README.md version
